--- a/tooling/ide/target-definition/pom.xml
+++ b/tooling/ide/target-definition/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.sling.ide</groupId>
     <artifactId>reactor</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.4</version>
   </parent>
 
   <artifactId>org.apache.sling.ide.target-definition</artifactId>
