--- a/tooling/ide/artifacts/pom.xml
+++ b/tooling/ide/artifacts/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.sling.ide</groupId>
         <artifactId>reactor</artifactId>
-        <version>1.0.4</version>
+        <version>1.0.5-SNAPSHOT</version>
     </parent>
     <artifactId>org.apache.sling.ide.artifacts</artifactId>
     <packaging>eclipse-plugin</packaging>
