--- a/contrib/launchpad/debian/pom.xml
+++ b/contrib/launchpad/debian/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-    <!--
+<!--
 Licensed to the Apache Software Foundation (ASF) under one
 or more contributor license agreements.  See the NOTICE file
 distributed with this work for additional information
@@ -17,8 +17,10 @@ KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.
     -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+<project 
+    xmlns="http://maven.apache.org/POM/4.0.0" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.sling</groupId>
@@ -26,34 +28,28 @@ under the License.
         <version>22</version>
         <relativePath>../../../parent/pom.xml</relativePath>
     </parent>
-
     <artifactId>sling-lauchpad</artifactId>
     <packaging>jar</packaging>
     <version>8-SNAPSHOT</version>
-
     <name>Apache Sling Launchpad Debian Package Builder</name>
     <description>
         Simple packaged installation for sling launchpad standalone jar
         as a system daemon.
     </description>
-
     <scm>
         <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/launchpad/builder/debian</connection>
         <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/launchpad/builder/debian</developerConnection>
         <url>http://svn.apache.org/viewvc/sling/trunk/launchpad/builder/debian</url>
     </scm>
-
     <properties>
         <!--
             jdeb plugin version for debian package
         -->
         <jdeb.version>1.0.1</jdeb.version>
-
         <launchpad.artifact>org.apache.sling.launchpad</launchpad.artifact>
         <launchpad.version>8-SNAPSHOT</launchpad.version>
         <launchpad.classifier>standalone</launchpad.classifier>
     </properties>
-
     <build>
         <plugins>
             <plugin>
@@ -77,51 +73,49 @@ under the License.
                                     </mapper>
                                 </data>
                                 <data>
-                                        <src>${project.basedir}/src/root_fs/</src>
-                                        <type>directory</type>
-                                        <excludes>**/.svn/</excludes>
-                                        <mapper>
-                                                <type>perm</type>
-                                                <prefix>/</prefix>
-                                        </mapper>
+                                    <src>${project.basedir}/src/root_fs/</src>
+                                    <type>directory</type>
+                                    <excludes>**/.svn/</excludes>
+                                    <mapper>
+                                        <type>perm</type>
+                                        <prefix>/</prefix>
+                                    </mapper>
                                 </data>
                             </dataSet>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<goals>
-    						<goal>copy-dependencies</goal>
-						</goals>
-						<phase>process-resources</phase>
-						<configuration>
-							<outputDirectory>${project.build.directory}</outputDirectory>
-							<includeArtifactIds>${launchpad.artifact}</includeArtifactIds>
-							<excludeTransitive>true</excludeTransitive>
-							<overWriteReleases>false</overWriteReleases>
-							<overWriteSnapshots>false</overWriteSnapshots>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <phase>process-resources</phase>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                            <includeArtifactIds>${launchpad.artifact}</includeArtifactIds>
+                            <excludeTransitive>true</excludeTransitive>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-    
-	<dependencies>
-	    <dependency>
-	        <groupId>org.apache.sling</groupId>
-	        <artifactId>${launchpad.artifact}</artifactId>
-	        <version>${launchpad.version}</version>
-	        <classifier>${launchpad.classifier}</classifier>
-	    </dependency>
-	</dependencies>
-        
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>${launchpad.artifact}</artifactId>
+            <version>${launchpad.version}</version>
+            <classifier>${launchpad.classifier}</classifier>
+        </dependency>
+    </dependencies>
     <reporting>
         <plugins>
             <plugin>
@@ -136,7 +130,6 @@ under the License.
             </plugin>
         </plugins>
     </reporting>
-
     <repositories>
         <repository>
             <id>OPS4J</id>
