--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
                         <Private-Package>
                             org.apache.sling.validation.impl*
                         </Private-Package>
+                        <Embed-Dependency>commons-lang3</Embed-Dependency>
                     </instructions>
                 </configuration>
             </plugin>
@@ -142,10 +143,11 @@
             <version>2.7.1</version>
             <scope>provided</scope>
         </dependency>
+        <!-- used for getting type information of validators -->
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.5</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
