--- a/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-integration-tests/pom.xml
+++ b/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-integration-tests/pom.xml
@@ -71,7 +71,7 @@
     <dependency>
       <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.engine</artifactId>
-      <version>2.3.8</version>
+      <version>2.3.10</version>
       <scope>test</scope>
     </dependency>
     <!-- logging -->
@@ -159,10 +159,10 @@
               </execution>
             </executions>
             <configuration>
-              <excludes>
-                <exclude>**/SlingExtensionModelsIT.*</exclude>
-                <exclude>**/SlingScriptingJavaIT.*</exclude>
-              </excludes>
+              <includes>
+                <include>**/SlingExtensionModelsIT.*</include>
+                <!-- <include>**/SlingScriptingJavaIT.*</include> -->
+              </includes>
             </configuration>
           </plugin>
         </plugins>
