--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,6 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Export-Package>
-                            org.apache.sling.junit.remote.exported.*,
-                            org.apache.sling.junit.remote.ide.*
-                        </Export-Package>
                         <Import-Package>
                             org.apache.http.*; resolution:=optional,
                             org.apache.sling.testing.tools.http; resolution:=optional,
@@ -78,7 +74,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.junit.core</artifactId>
-            <version>1.0.8</version>
+            <version>1.0.9-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
