--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@
             <plugin>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>maven-launchpad-plugin</artifactId>
-                <version>2.3.0</version>
+                <version>2.3.3-SNAPSHOT</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
@@ -454,6 +454,13 @@
     </profiles>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.launchpad</artifactId>
+            <version>8-SNAPSHOT</version>
+            <type>partialbundlelist</type>
+            <classifier>bundlelist</classifier>
+        </dependency>
 
       <!-- The integration tests -->
         <dependency>
