--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,7 @@
                         <version>8-SNAPSHOT</version>
                     </defaultBundleList>
                     <jarWebSupport>
+                        <bundles>
                           <bundle>
                                 <groupId>org.apache.felix</groupId>
                                 <artifactId>org.apache.felix.http.api</artifactId>
@@ -194,6 +195,7 @@
                                 <version>2.3.2</version>
                                 <startLevel>5</startLevel>
                             </bundle>
+                        </bundles>
                     </jarWebSupport>
                     <additionalBundles>
                         <bundle>
