--- a/bundles/scripting/jsp-taglib/pom.xml
+++ b/bundles/scripting/jsp-taglib/pom.xml
@@ -93,6 +93,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
+			<artifactId>org.apache.sling.scripting.core</artifactId>
+			<version>2.0.29-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.scripting.jsp</artifactId>
 			<version>2.0.8</version>
 			<!-- using compile scope to help IDEs -->
