--- a/contrib/scripting/thymeleaf/pom.xml
+++ b/contrib/scripting/thymeleaf/pom.xml
@@ -87,6 +87,12 @@
     </dependency>
     <dependency>
       <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.scripting.core</artifactId>
+      <version>2.0.29-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.commons.osgi</artifactId>
       <version>2.2.0</version>
       <scope>provided</scope>
