--- a/testing/junit/core/pom.xml
+++ b/testing/junit/core/pom.xml
@@ -160,11 +160,23 @@
             <version>${jacoco.version}</version>
             <scope>provided</scope>
         </dependency>
- 		<dependency>
+ 		    <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
             <version>${hamcrest.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.13</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.commons.osgi</artifactId>
+            <version>2.2.2</version>
         </dependency>
     </dependencies>
 </project>
