--- a/launchpad/base/src/main/resources/sling.properties
+++ b/launchpad/base/src/main/resources/sling.properties
@@ -206,19 +206,25 @@ sling.bootdelegation.ibm = com.ibm.xml.*
 
 # Only provide the OSGi packages contained in the Apache Felix framework itself
 sling.osgi-core-packages= \
- org.osgi.framework; version=1.7.0, \
+ org.osgi.dto; version=1.0.0, \
+ org.osgi.framework; version=1.8.0, \
+ org.osgi.framework.dto; version=1.8.0, \
  org.osgi.framework.hooks.bundle; version=1.1.0, \
  org.osgi.framework.hooks.resolver; version=1.0.0, \
  org.osgi.framework.hooks.service; version=1.1.0, \
- org.osgi.framework.hooks.weaving; version=1.0.0, \
- org.osgi.framework.launch; version=1.1.0, \
- org.osgi.framework.namespace; version=1.0.0, \
+ org.osgi.framework.hooks.weaving; version=1.1.0, \
+ org.osgi.framework.launch; version=1.2.0, \
+ org.osgi.framework.namespace; version=1.1.0, \
  org.osgi.framework.startlevel; version=1.0.0, \
- org.osgi.framework.wiring; version=1.1.0, \
+ org.osgi.framework.startlevel.dto; version=1.0.0, \
+ org.osgi.framework.wiring; version=1.2.0, \
+ org.osgi.framework.wiring.dto; version=1.2.0, \
  org.osgi.resource; version=1.0.0, \
+ org.osgi.resource.dto; version=1.0.0, \
  org.osgi.service.packageadmin; version=1.2.0, \
  org.osgi.service.startlevel; version=1.1.0, \
  org.osgi.service.url; version=1.0.0
+
 
 # Only provide the tracker (from the Apache felix framework) 
 sling.osgi-compendium-services= \
